fix: twitter iframe double scroll issue

--- a/components/UI/Drawer/Drawer.module.css
+++ b/components/UI/Drawer/Drawer.module.css
@@ -94,12 +94,11 @@
 }
 
 .sourceContentIframeWrapper {
-  max-height: 350px;
-  overflow: scroll;
+  overflow-y: hidden;
 }
 
 .sourceContentIframe {
-  height: 340px;
+  height: 600px;
 }
 
 .sourceHelpContent {
